--- a/sass/main.css
+++ b/sass/main.css
@@ -339,6 +339,12 @@ body {
 .social-networks {
   display: flex;
 }
+.social-networks a {
+  transition: 0.3s;
+}
+.social-networks a:hover {
+  transform: scale(1.1);
+}
 .social-networks__wr {
   width: 45px;
   height: 45px;
@@ -359,7 +365,6 @@ body {
 .navigation a {
   font-size: 18px;
   padding: 8px;
-  font-size: 18px;
   flex: 0 1 160px;
   text-align: center;
 }
@@ -999,6 +1004,48 @@ body {
 }
 .technology__text {
   margin-bottom: 10px;
+}
+
+.footer {
+  background-color: #0092d5;
+  color: #fff;
+  padding-top: 35px;
+  padding-bottom: 25px;
+}
+.footer a {
+  color: #fff;
+}
+.footer a:hover {
+  text-decoration: underline;
+}
+.footer__items {
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer__text {
+  margin-bottom: 12px;
+}
+.footer .item-1 {
+  flex: 1 1 50%;
+}
+.footer .item-1 a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.footer .item-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 1 50%;
+  font-size: 20px;
+}
+.footer .item-2 a {
+  margin-bottom: 12px;
+}
+.footer__btn {
+  font-size: 20px;
+  display: block;
 }
 
 /*# sourceMappingURL=main.css.map */
