--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,6 +72,13 @@
 .social-networks {
     display: flex;
 
+    a {
+        transition: 0.3s;
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
+
     &__wr {
         width: 45px;
         height: 45px;
@@ -94,7 +101,6 @@
     a {
         font-size: 18px;
         padding: 8px;
-        font-size: 18px;
         flex: 0 1 160px;
         text-align: center;
     }
@@ -108,9 +114,7 @@
     }
 
     &__title {
-        // width: 450px;
         text-transform: uppercase;
-        // color: #ffffff;
         font-size: 35px;
         font-weight: 700;
         line-height: 1.2;
@@ -892,3 +896,55 @@
 }
 
 
+//**********************  FOOTER  *********************
+.footer {
+    background-color: #0092d5;
+    color: #fff;
+    padding-top: 35px;
+    padding-bottom: 25px;
+
+    a {
+        color: #fff;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    &__text {
+        margin-bottom: 12px;
+    }
+
+    .item-1 {
+        flex: 1 1 50%;
+
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+
+    .item-2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex: 1 1 50%;
+        font-size: 20px;
+
+        a {
+            margin-bottom: 12px;
+        }
+    }
+
+    &__btn {
+        font-size: 20px;
+        display: block;
+    }
+}
