--- a/sass/main.css
+++ b/sass/main.css
@@ -230,16 +230,16 @@ body {
   display: none;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 0.3s;
-}
-
 .modal__close {
   transition: 0.3s;
 }
 .modal__close:hover {
   opacity: 1;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 0.3s;
 }
 
 @keyframes fade {
@@ -285,7 +285,6 @@ body {
 .wrapper {
   max-width: 1360px;
   margin: 0 auto;
-  padding: 0 15px;
 }
 
 .wrapper-2 {
@@ -304,6 +303,9 @@ body {
   background-repeat: no-repeat;
   background-position: 0 0;
   padding-bottom: 30px;
+}
+.main-section__title {
+  font-size: 28px;
 }
 .main-section a {
   color: #fff;
@@ -328,10 +330,20 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  transition: 0.3s;
 }
 .social__contact a {
   font-size: 18px;
+  margin-bottom: 8px;
 }
+.social__contact a:hover {
+  text-decoration: underline;
+}
+
+.wr-text {
+  width: 170px;
+}
+
 .request-call {
   padding: 14px 30px;
 }
@@ -363,10 +375,27 @@ body {
   justify-content: space-between;
 }
 .navigation a {
-  font-size: 18px;
-  padding: 8px;
-  flex: 0 1 160px;
   text-align: center;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.navigation li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  flex: 0 1 160px;
+  margin-right: 30px;
+  min-height: 75px;
+  font-size: 18px;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.navigation li:hover {
+  background-color: #fca445;
 }
 
 .content-main {
