--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,6 @@
 .wrapper {
     max-width: 1360px;
     margin: 0 auto;
-    padding: 0 15px;
 }
 
 .wrapper-2 {
@@ -25,6 +24,10 @@
 }
 
 .main-section {
+    &__title {
+        font-size: 28px;
+    }
+
     background-image: url("../img/bg/backgroud.png");
     background-repeat: no-repeat;
     background-position: 0 0;
@@ -54,15 +57,21 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        transition: 0.3s;
 
         a {
             font-size: 18px;
+            margin-bottom: 8px;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
+}
 
-    &__info {
-        //background-color: red;
-    }
+.wr-text {
+    width: 170px;
 }
 
 .request-call {
@@ -74,6 +83,7 @@
 
     a {
         transition: 0.3s;
+
         &:hover {
             transform: scale(1.1);
         }
@@ -98,12 +108,36 @@
     align-items: center;
     justify-content: space-between;
 
+
     a {
-        font-size: 18px;
-        padding: 8px;
-        flex: 0 1 160px;
         text-align: center;
+        display: block;
+        width: 100%;
+        height: 100%;
+
     }
+
+    li {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 4px;
+        flex: 0 1 160px;
+        margin-right: 30px;
+        min-height: 75px;
+        font-size: 18px;
+        border-radius: 7px;
+        cursor: pointer;
+
+        transition: 0.3s;
+
+        &:hover {
+            background-color: #fca445 ;
+        }
+    }
+
+
 }
 
 .content-main {
