--- a/css/main.css
+++ b/css/main.css
@@ -316,6 +316,14 @@ body {
 .main-section__title {
   font-size: 28px;
 }
+.main-section .navigation__link::after {
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
 .main-section a {
   color: #fff;
 }
