--- a/sass/main.scss
+++ b/sass/main.scss
@@ -33,9 +33,25 @@
     background-position: 0 0;
     padding-bottom: 30px;
 
+    .navigation {
+        &__link {
+            &::after {
+                content: " ";
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+
+            }
+        }
+    }
+
+
     a {
         color: #fff;
     }
+
 }
 
 .header {
@@ -133,7 +149,7 @@
         transition: 0.3s;
 
         &:hover {
-            background-color: #fca445 ;
+            background-color: #fca445;
         }
     }
 
@@ -684,7 +700,6 @@
             position: absolute;
             left: -2px;
             top: 6px;
-
         }
     }
 }
