--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,3 +1,32 @@
+// -----------------active------------
+.active {
+    .header-burger {
+        transition: 0.3s;
+
+        span {
+            transform: scale(0);
+        }
+
+        &::before {
+            transform: rotate(45deg);
+            top: 9px;
+        }
+
+        &::after {
+            transform: rotate(-45deg);
+            bottom: 9px;
+        }
+    }
+
+    nav {
+        ul {
+            left: 0;
+        }
+
+    }
+
+}
+
 .header-burger {
     display: none;
 }
@@ -14,7 +43,7 @@
 
     nav .navigation {
         position: fixed;
-        top: 0;
+        top: 84px;
         left: -100%;
         width: 100%;
         height: 100%;
@@ -170,6 +199,10 @@
 }
 
 @media (max-width: 680px) {
+    nav .navigation {
+        top: 64px
+    }
+
 
     .modal__form {
         padding-top: 36px;
@@ -203,6 +236,9 @@
         display: none;
     }
 
+    nav .navigation {
+        top: 60px;
+    }
     .content-main__wr-message {
         flex-direction: column;
 
