--- a/sass/main.css
+++ b/sass/main.css
@@ -108,6 +108,10 @@ body {
   color: #fff;
 }
 
+.block {
+  overflow: hidden;
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -1095,6 +1099,24 @@ body {
   display: block;
 }
 
+.active .header-burger {
+  transition: 0.3s;
+}
+.active .header-burger span {
+  transform: scale(0);
+}
+.active .header-burger::before {
+  transform: rotate(45deg);
+  top: 9px;
+}
+.active .header-burger::after {
+  transform: rotate(-45deg);
+  bottom: 9px;
+}
+.active nav ul {
+  left: 0;
+}
+
 .header-burger {
   display: none;
 }
@@ -1108,7 +1130,7 @@ body {
   }
   nav .navigation {
     position: fixed;
-    top: 0;
+    top: 84px;
     left: -100%;
     width: 100%;
     height: 100%;
@@ -1228,6 +1250,9 @@ body {
   }
 }
 @media (max-width: 680px) {
+  nav .navigation {
+    top: 64px;
+  }
   .modal__form {
     padding-top: 36px;
   }
@@ -1254,6 +1279,9 @@ body {
 @media (max-width: 490px) {
   .request-call {
     display: none;
+  }
+  nav .navigation {
+    top: 60px;
   }
   .content-main__wr-message {
     flex-direction: column;
